Misc SonarQube Fixes.